<?xml version="1.0" encoding="utf-8"?>
<!--*====*====*====*====*====*====*====*====*====*====*====*====*====*====*====*
  Copyright (c) 2015 Qualcomm Technologies, Inc.
  All Rights Reserved.
  Confidential and Proprietary - Qualcomm Technologies, Inc.
=============================================================================*-->

<resources>

    <string name="app_name">SnapdragonSDKTest</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="EULA">add / remove GF</string>
    <string name="RadioVersion">pause / resume GF</string>
    <string name="BuildInfo">update GF</string>
    <string name="result">Result: </string>

</resources>
